		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.
	* File join has been disabled in this release, refer to Bugzilla
	  16929.
	* A new Lustre ADIO driver is available for:
	  MPICH2-1.0.7

Severity   : major
Frequency  : rare
Bugzilla   : 16492
Description: mds is deadlocked
Details    : in rare cases, inode in catalog can have i_no less than have parent
             i_no, this produce wrong order for locking during open, and parallel
             unlink can be lock open. this need teach mds_open to grab locks in
             resouce id order, not at parent -> child order.

Severity   : enhancement
Bugzilla   : 1819
Description: Add /proc entry for import status
Details    : The mdc, osc, and mgc import directories now have
             an import directory that contains useful import data for debugging
             connection problems.

Severity   : enhancement
Bugzilla   : 15966
Description: Re-disable certain /proc logging
Details    : Enable and disable client's offset_stats, extents_stats and
             extents_stats_per_process stats logging on the fly.

Severity   : enhancement
Bugzilla   : 16643
Description: Generic /proc file permissions
Details    : Set /Proc file permissions in a more generic way to enable non-
             root users operate on some /proc files.

Severity   : major
Bugzilla   : 16561
Description: Hitting mdc_commit_close() ASSERTION
Details    : Properly handle request reference release in
             ll_release_openhandle().

Severity   : normal
Bugzilla   : 16907
Description: Prevent import from entering FULL state when server in recovery

Severity   : major
Bugzilla   : 16750
Description: service mount cannot take device name with ":"
Details    : Only when device name contains ":/" will mount treat it as
             client mount.
